--- a/Image_Classification_with_Pytorch_using_CIFAR10.ipynb
+++ b/Image_Classification_with_Pytorch_using_CIFAR10.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Image Classification with Pytorch using CIFAR10.ipynb",
       "version": "0.3.2",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Tooluloope/Pytorch_CIFAR10/blob/master/Image_Classification_with_Pytorch_using_CIFAR10.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "metadata": {
         "id": "bo5rQs_C_394",
